platform/tests/policies/values.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Value
metadata:
  name: values
namespaceSelector:
  - name: staging
    labels:
      kubernetes.io/metadata.name: staging
